fix for the not centered hamburger

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -200,11 +200,11 @@ a {
 }
 
 #div-search-button{
-    margin: 5px;
+    margin: 10px;
 }
 
 #div-theme-toggle{
-    margin: 5px;
+    margin: 10px;
 }
 
 /* Hamburger Menu */
